# pytorch-parser

./: .flake8  README.rst  pyproject.toml  pytest.ini
tests/: test_disc_rnng.py
torchparser/: __init__.py
