[build-system]
requires = ["flit"]
build-backend = "flit.buildapi"

[tool.flit.metadata]
module = "torchparser"
author = "Kemal Kurniawan"
author-email = "kemal@kkurniawan.com"
home-page = "https://github.com/kmkurn/pytorch-parser"
requires = []
requires-python = ">=3.6,<4"
description-file = "README.rst"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[tool.flit.metadata.requires-extra]
test = ["pytest ~=5.2.3", "pytest-cov"]
doc = []
dev = ["flake8", "flake8-mypy", "yapf"]
